syntax = "proto3";

option go_package = "go-echo-server/server/message";

package message;

service Greeter {
  rpc SendText (TextRequest) returns(TextResponse) {}
}

message TextRequest {
  string message = 1;
  string projectName = 2;
}

message TextResponse {
  string message = 1;
}
